Type and formatted my resume

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/cerulean.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -381,7 +381,19 @@ div.tocify {
 </div>
 
 
-<p>I am a student.</p>
+<p>I am a first-year MS student majoring in biostatistics at Columbia University School of Public Health. I am a highly motivated student passionate about data science, statistics, coding, machine learning, database management, consulting, risk, and technology application. I have professional experiences in Statistical Analysis, Modeling, Inference, Regression, Data Visualization, Python, SQL, and R programming.</p>
+<p>I am seeking internship opportunities as a Data Analyst or Data Scientist.</p>
+<ul>
+<li>Specialties:
+<ul>
+<li>R</li>
+<li>Python</li>
+<li>SQL</li>
+<li>Microsoft Office (Excel, Word, Powerpoint)</li>
+<li>Outlook</li>
+</ul></li>
+</ul>
+<p>Email: <a href="mailto:chenxiliu02@gmail.com" class="email">chenxiliu02@gmail.com</a></p>
 
 
 
