--- a/index.html
+++ b/index.html
@@ -382,6 +382,7 @@ div.tocify {
 
 
 <p>Welcome to my website! I created this website for the purpose of putting my academic and professional experiences to the internet.</p>
+<p><img src="DSC01420.JPG" style="width:50%"></p>
 <p><a href="https://www.linkedin.com/in/chenxi-liu-columbia/">My Linkedln Page</a></p>
 <div id="education" class="section level2">
 <h2>Education</h2>
