added instagram link

--- a/about.html
+++ b/about.html
@@ -393,7 +393,8 @@ div.tocify {
 <li>Outlook</li>
 </ul></li>
 </ul>
-<p>Email: <a href="mailto:chenxiliu02@gmail.com" class="email">chenxiliu02@gmail.com</a></p>
+<p>Email: <a href="mailto:chenxiliu02@gmail.com" class="email">chenxiliu02@gmail.com</a><br />
+Instagram: <a href="https://www.instagram.com/chenxiliu233/">@chenxiliu233</a></p>
 
 
 
