still broken image

--- a/about.html
+++ b/about.html
@@ -387,7 +387,7 @@ div.tocify {
 </div>
 
 
-<p><img src=".\images\DSC01420.jpg" style="width:50%"></p>
+<p><img src=".\images\me.jpg" style="width:50%"></p>
 <div id="education" class="section level2">
 <h2>Education</h2>
 <p><strong>Columbia University</strong> | New York, NY<span style="float:right">Expected May 2022</span><br />
