--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@ div.tocify {
 <p>I like traveling and playing sports.</p>
 <div id="ski" class="section level3">
 <h3>Ski</h3>
-<p><img src=".\images\IMG_8221.jpg" style="width:100%"></p>
+<p><img src=".\images\ski.jpg" style="width:100%"></p>
 </div>
 <div id="basketball" class="section level3">
 <h3>Basketball</h3>
@@ -424,19 +424,19 @@ div.tocify {
 </div>
 <div id="trackfield" class="section level3">
 <h3>Track&amp;Field</h3>
-<p><img src=".\images\IMG_0347.jpg" style="width:100%"></p>
+<p><img src=".\images\track.jpg" style="width:100%"></p>
 </div>
 <div id="japan" class="section level3">
 <h3>Japan</h3>
-<p><img src=".\images\IMG_5690.jpg" style="width:100%"></p>
+<p><img src=".\images\japan.jpg" style="width:100%"></p>
 </div>
 <div id="france" class="section level3">
 <h3>France</h3>
-<p><img src=".\images\IMG_3181.jpg" style="width:100%"></p>
+<p><img src=".\images\france.jpg" style="width:100%"></p>
 </div>
 <div id="yellow-stone" class="section level3">
 <h3>Yellow Stone</h3>
-<p><img src=".\images\IMG_0346.jpg" style="width:100%"></p>
+<p><img src=".\images\yellow.jpg" style="width:100%"></p>
 </div>
 </div>
 <div id="section" class="section level2">
