--- a/index.html
+++ b/index.html
@@ -359,7 +359,6 @@ div.tocify {
 
 <p>Welcome to my website! <img src=".\images\ds.jpg" style="width:100%"> I love data science, statistics and coding!</p>
 <p>I am a business analyst at Lumenis, a medical device company in San Jose. I recieved my MS majoring in biostatistics at Columbia University School of Public Health. I am a highly motivated student passionate about data science, statistics, coding, machine learning, database management, consulting, risk, and technology application. I have professional experiences in Statistical Analysis, Modeling, Inference, Regression, Data Visualization, Python, SQL, and R programming.</p>
-<p>I am seeking internship opportunities as a Data Analyst or Data Scientist.</p>
 <ul>
 <li>Specialties:
 <ul>
@@ -372,8 +371,8 @@ div.tocify {
 <li>SAS</li>
 </ul></li>
 </ul>
-<div id="my-rusume" class="section level2">
-<h2><a href="about.html">My Rusume</a></h2>
+<div id="my-cat" class="section level2">
+<h2><a href="about.html">My Cat</a></h2>
 <ul>
 <li>click above to view my resume</li>
 </ul>
