--- a/about.html
+++ b/about.html
@@ -13,12 +13,22 @@
 
 <title>About Me</title>
 
-<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
+<style>h1 {font-size: 34px;}
+       h1.title {font-size: 38px;}
+       h2 {font-size: 30px;}
+       h3 {font-size: 24px;}
+       h4 {font-size: 18px;}
+       h5 {font-size: 16px;}
+       h6 {font-size: 12px;}
+       code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
+       pre:not([class]) { background-color: white }</style>
 <script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
 <link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
 <script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
@@ -28,12 +38,16 @@
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
-<style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
-  pre:not([class]) {
-    background-color: white;
-  }
-</style>
+  code{white-space: pre-wrap;}
+  span.smallcaps{font-variant: small-caps;}
+  span.underline{text-decoration: underline;}
+  div.column{display: inline-block; vertical-align: top; width: 50%;}
+  div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
+  ul.task-list{list-style: none;}
+    </style>
+
+<style type="text/css">code{white-space: pre;}</style>
 <script type="text/javascript">
 if (window.hljs) {
   hljs.configure({languages: []});
@@ -46,32 +60,7 @@ if (window.hljs) {
 
 
 
-<style type="text/css">
-h1 {
-  font-size: 34px;
-}
-h1.title {
-  font-size: 38px;
-}
-h2 {
-  font-size: 30px;
-}
-h3 {
-  font-size: 24px;
-}
-h4 {
-  font-size: 18px;
-}
-h5 {
-  font-size: 16px;
-}
-h6 {
-  font-size: 12px;
-}
-.table th:not([align]) {
-  text-align: left;
-}
-</style>
+
 
 
 
@@ -81,10 +70,6 @@ h6 {
   max-width: 940px;
   margin-left: auto;
   margin-right: auto;
-}
-code {
-  color: inherit;
-  background-color: rgba(0, 0, 0, 0.04);
 }
 img {
   max-width:100%;
@@ -101,40 +86,13 @@ button.code-folding-btn:focus {
 summary {
   display: list-item;
 }
+pre code {
+  padding: 0;
+}
 </style>
 
 
 <style type="text/css">
-/* padding for bootstrap navbar */
-body {
-  padding-top: 51px;
-  padding-bottom: 40px;
-}
-/* offset scroll position for anchor links (for fixed navbar)  */
-.section h1 {
-  padding-top: 56px;
-  margin-top: -56px;
-}
-.section h2 {
-  padding-top: 56px;
-  margin-top: -56px;
-}
-.section h3 {
-  padding-top: 56px;
-  margin-top: -56px;
-}
-.section h4 {
-  padding-top: 56px;
-  margin-top: -56px;
-}
-.section h5 {
-  padding-top: 56px;
-  margin-top: -56px;
-}
-.section h6 {
-  padding-top: 56px;
-  margin-top: -56px;
-}
 .dropdown-submenu {
   position: relative;
 }
@@ -162,7 +120,7 @@ body {
   margin-right: -10px;
 }
 .dropdown-submenu:hover>a:after {
-  border-left-color: #ffffff;
+  border-left-color: #adb5bd;
 }
 .dropdown-submenu.pull-left {
   float: none;
@@ -174,7 +132,7 @@ body {
 }
 </style>
 
-<script>
+<script type="text/javascript">
 // manage active state of menu based on current page
 $(document).ready(function () {
   // active menu anchor
@@ -185,10 +143,23 @@ $(document).ready(function () {
   var menuAnchor = $('a[href="' + href + '"]');
 
   // mark it active
-  menuAnchor.parent().addClass('active');
+  menuAnchor.tab('show');
 
   // if it's got a parent navbar menu mark it active as well
   menuAnchor.closest('li.dropdown').addClass('active');
+
+  // Navbar adjustments
+  var navHeight = $(".navbar").first().height() + 15;
+  var style = document.createElement('style');
+  var pt = "padding-top: " + navHeight + "px; ";
+  var mt = "margin-top: -" + navHeight + "px; ";
+  var css = "";
+  // offset scroll position for anchor links (for fixed navbar)
+  for (var i = 1; i <= 6; i++) {
+    css += ".section h" + i + "{ " + pt + mt + "}\n";
+  }
+  style.innerHTML = "body {" + pt + "padding-bottom: 40px; }\n" + css;
+  document.head.appendChild(style);
 });
 </script>
 
@@ -200,7 +171,6 @@ $(document).ready(function () {
   max-height: 500px;
   min-height: 44px;
   overflow-y: auto;
-  background: white;
   border: 1px solid #ddd;
   border-radius: 4px;
 }
@@ -326,7 +296,7 @@ div.tocify {
 
 
 <!-- setup 3col/9col grid for toc_float and main content  -->
-<div class="row-fluid">
+<div class="row">
 <div class="col-xs-12 col-sm-4 col-md-3">
 <div id="TOC" class="tocify">
 </div>
@@ -378,7 +348,7 @@ div.tocify {
   </div><!--/.container -->
 </div><!--/.navbar -->
 
-<div class="fluid-row" id="header">
+<div id="header">
 
 
 
@@ -388,55 +358,6 @@ div.tocify {
 
 
 <p><img src=".\images\me.jpg" style="width:50%"></p>
-<div id="education" class="section level2">
-<h2>Education</h2>
-<p><strong>Columbia University</strong> | New York, NY<span style="float:right">Expected May 2022</span><br />
-M.S. Candidate in <strong>Biostatistics</strong> (GPA in progress)<br />
-<strong>Relevant Courses</strong>: Probability, Data Science, Biostatistical Methods.<br />
-<strong>Extra Courses</strong>: Relational Databases and SQL(edX), Machine Learning (Coursera)<br />
-<strong>Franklin &amp; Marshall College (F&amp;M)</strong> | Lancaster, PA<span style="float:right">May 2020</span><br />
-B.A. in <strong>Mathematics</strong> (GPA: 3.37/4.0)<br />
-<strong>Relevant Courses</strong>: Statistical Modeling, Computational Mathematics, Probability and Statistics I&amp;II, Computer Science I&amp;II, Linear Algebra, Mathematics Analysis, Calculus II &amp; III.</p>
-</div>
-<div id="programming-skills" class="section level2">
-<h2>Programming &amp; Skills</h2>
-<ul>
-<li>R(tidyverse, ggplot, httr, rvest, ploty), Python(numpy, pandas, matplotlib, scikit-learn), LaTeX, MATLAB, SQL, MS Office.<br />
-</li>
-<li>Statistical Analysis, Machine Learning, Modeling, Inference, Regression, Data Visualization, Data Mining, Data Cleaning, Data Manipulation, Data Scraping, Command Line, Git and Version Control.<br />
-</li>
-</ul>
-</div>
-<div id="professional-experiences" class="section level2">
-<h2>Professional Experiences</h2>
-<p><strong>Bohai Huijin Securities Asset Management Co., Ltd.</strong><span style="float:right">Beijing, China</span><br />
-<em>Intern Analyst</em><span style="float:right">July 2019 - August 2019</span></p>
-<ul>
-<li>Performed investment analysis of the medical industry by analyzing the financial data of 200 A-share listed companies from Wind, and used Capital Asset Pricing Model to spot potential investment targets.<br />
-</li>
-<li>Constructed an investment portfolio based on returns of investment using Python pandas.<br />
-</li>
-<li>Visualized data frames into plots using Python matplotlib to help decision makings about adding assets.<br />
-</li>
-<li>Wrote reports and drew diagrams using latex for the interview meetings with the investors.</li>
-</ul>
-<p><strong>ByteDance Ltd.</strong> <span style="float:right">Beijing, China</span><br />
-<em>Business Analytics Intern</em><span style="float:right">May 2019 - June 2019</span></p>
-<ul>
-<li>Conducted descriptive statistics research on the competitive app by analyzing its daily active user, new user retention, commercial mode, marketing strategy, user characteristics, and user behavior.</li>
-<li>Identified a strong correlation between the boom of daily active users on the competitive app and their in-app holiday events and promotions.</li>
-<li>Wrote SQL queries to extract and create designed datasets for analyses from databases.</li>
-<li>Improved operation strategy by analyzing click rate, conversion rate, and retention rate in Excel.</li>
-</ul>
-<p><strong>Tsinghua University</strong> <span style="float:right">Beijing, China</span><br />
-<em>Research Assistant</em> <span style="float:right">June 2018 - August 2018</span></p>
-<ul>
-<li>Implemented data cleansing, missing data imputation, unnecessary data removal, and data formatting to establish the flowing model about qualified scientists and technicians using R.</li>
-<li>Visualized data by scatterplots, density plots, pie charts, and histograms using RStudio ggplot to analyze the flow characteristics of the region’s high-level talents.</li>
-<li>Analyzed the contributing factors influencing talent flow and the construction of the flow model using RStudio Fitting Linear and Logistic Models.</li>
-<li>Proposed adding control variables such as the level of medical care into the model.</li>
-</ul>
-</div>
 <div id="academic-projects" class="section level2">
 <h2>Academic Projects</h2>
 <p><strong>Markov Chain in Predicting the Fluctuation of the Stock Market (Python)</strong> <span style="float:right">December 2019</span></p>
@@ -473,7 +394,7 @@ Instagram: <a href="https://www.instagram.com/chenxiliu233/">@chenxiliu233</a></
 
 // add bootstrap table styles to pandoc tables
 function bootstrapStylePandocTables() {
-  $('tr.header').parent('thead').parent('table').addClass('table table-condensed');
+  $('tr.odd').parent('tbody').parent('table').addClass('table table-condensed');
 }
 $(document).ready(function () {
   bootstrapStylePandocTables();
@@ -491,7 +412,7 @@ $(document).ready(function () {
 
 $(document).ready(function () {
   $('.tabset-dropdown > .nav-tabs > li').click(function () {
-    $(this).parent().toggleClass('nav-tabs-open')
+    $(this).parent().toggleClass('nav-tabs-open');
   });
 });
 </script>
@@ -500,6 +421,9 @@ $(document).ready(function () {
 
 <script>
 $(document).ready(function ()  {
+
+    // temporarily add toc-ignore selector to headers for the consistency with Pandoc
+    $('.unlisted.unnumbered').addClass('toc-ignore')
 
     // move toc-ignore selectors from section div to header
     $('div.section.toc-ignore')
