--- a/index.html
+++ b/index.html
@@ -379,7 +379,8 @@ div.tocify {
 </div>
 <div id="more-about-me" class="section level2">
 <h2>More about me</h2>
-<p><a href="https://www.linkedin.com/in/chenxi-liu-columbia/">My LinkedlIn Page</a><br />
+<p><a href="https://wc2750.github.io/AvocadoProj/index.html">My Sample Project Page</a><br />
+<a href="https://www.linkedin.com/in/chenxi-liu-columbia/">My LinkedlIn Page</a><br />
 <a href="https://github.com/chenxi-liu233">My Github Page</a></p>
 </div>
 <div id="my-pictures" class="section level2 tabset tabset-fade">
