--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ div.tocify {
 <div id="my-cat" class="section level2">
 <h2><a href="about.html">My Cat</a></h2>
 <ul>
-<li>click above to view my resume</li>
+<li>click above to view my cute cat!</li>
 </ul>
 </div>
 <div id="more-about-me" class="section level2">
